--- a/Balise do structure/web view recorded.html
+++ b/Balise do structure/web view recorded.html
@@ -31,7 +31,10 @@
 <script>
     var vidl=document.getElementById("maVideo");
 </script>
-<input type=”button” onClick="vidl.play()" value="Play”/>
+
+<input id="maVideo" type=”button” onClick="vidl.play()" value="Play”/>
+
+
 
 </body>
 </html>
