C'est comme ça qu'on déplace une image

--- a/Balise do structure/active-circles.html
+++ b/Balise do structure/active-circles.html
@@ -58,7 +58,11 @@
         // dessin d'une balle : x départ, vitesse / y, rayon
         function dessineBalle(idCercle,v){
             if(cercles[idCercle][3]==1){
-                    X.beginPath*cercles[3]/R;
+
+                cercles[3].beginPath*v/R;
+
+
+
             }
         }
             var monCanvas = document.getElementById('dessin');
